# tplayer

./: CMakeLists.txt  README.md  config.h.cmake
cmake/: tplayer_macros.cmake
src/: CMakeLists.txt  gui.cpp  gui.hpp  main.cpp
